fix(landing): fixes overflowed width of experience cards (fix is result of alignment OCD)

--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -7,7 +7,7 @@
 }
 
 .cards.cards--experiences {
-  grid-template-columns: repeat(4, minmax(200px, 1fr));
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .cards .card {
